src/ShotView.css
@font-face{
    font-family: 'MontserratSemibold';
    src: url('./fonts/Montserrat-SemiBold.ttf') format('truetype');
}

.ShotView{
    height:100%;
    width:100%;
    overflow: auto;
    position: relative;
    scroll-behavior: smooth;
}

#shotview-wrapper{
    background-image: linear-gradient(to bottom,#160d1a  10% ,#000000 90%);
    width: 90%;
    border-radius: 15px;
    align-items: center;
    align-content: center;
    margin: auto;
    margin-top: 10px;
    padding-bottom: 1px;
}

.court-image{
    transform: rotate(180deg);
    object-fit: cover;
    max-width :800px;
    width: 70%;
    display: none;
}.show {display: block;}

#transparent-court-on-top{
    position: relative;
    transform: rotate(180deg);
    object-fit: cover;
    width: 70%;
    max-width :800px;
    z-index: 1;
}

#gray-background{
    height: 100%;
    width: 70%;
    max-width :800px;
    position: absolute;
}

#imageview-div{
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
    margin: auto;
    width: 100%;
    max-width :700px;
}

.imageview-child{
    position:absolute;
    align-items: center;
}

#zones-underneath{
    z-index: 0;
}

.rectangle {
    fill:white;
    background-color: lightgreen;
    height:30.0px;
    stroke:black;
    stroke-width: 0.0 ;
    width:30.0px ;
}

.labelFrac {
    height: min-content;
    line-height: 1;
    font-size: 18px;
    font-family: "MontserratSemiBold";
}

.labelPerc {
    height: fit-content;
    line-height: 1;
    padding-top: 2px;
    font-family: "MontserratSemiBold";
    font-size: 16px;
}

#view-title{
    padding: 10px 0px 0px 0px;
    font-size: 20px;
    text-align: center;
    height: fit-content ;
    min-height: 45px;
}


@keyframes spin {
    from {transform:rotate(0deg)}
    to {transform:rotate(360deg)}
  }

  @keyframes FillIn {
    from {
      fill: rgb(0, 195, 255);
    }
    to {
      fill: rgb(0, 195, 255,0.1);
    }
}
.legend-bottom-label{
    width: 45%;
    position: relative;
    display: inline-block;
    margin: 0;
    margin-top: 2%;
    margin-bottom: 1%
}

.legend-left-label{
    text-align: left;
}

.legend-right-label{
    text-align: right;
}

.legend-top-label{
    margin: 0;
    margin-top: 4%;
}
    
#color-legend{
    position: absolute;
    background-color: #2d2d2d;
}

#heat-color-legend{
    position: absolute;
}

#size-legend{
    position: absolute;
    display: inline-block;
    margin: 0 auto;
}

#svg-size-legend{
    position: relative;
}

#color-legend-gradient{
    width: 90%;
    height: 20%;
    background-image: linear-gradient(to right,#2f75ee  0% ,#56b0ff  18% ,#aed9ff  36% ,#d0cfcf  50% ,#ff9c9c  69% ,#ff6363  83% ,#fc2121 95%);
    background-size: cover;
    background-repeat: no-repeat;
    border: 1px;
    border-style: solid;
    border-color: black;
    margin: 0 auto;
    
}

#size-legend-gradient{
    width: 90%;
    height: 40%;
    margin: 0 auto;
    line-height: 1;
}

#heat-legend-gradient{
    width: 90%;
    height: 20%;
    background-image: linear-gradient(to right,#bc53f8  0% ,#dd76ff  18% ,#e696fa  36% ,#c4b8ff  50% ,#6bb2f8  69% ,#62c8ff  83% ,#90ebff 95%);
    background-size: cover;
    background-repeat: no-repeat;
    margin: 0 auto;
    border: 1px;
    border-style: solid;
    border-color: black;
}

#loading-text{
    font-size: 30px;
    font-family: "MontserratSemiBold";
}

.trad-popover .ant-popover-arrow-content{
    background-color: rgb(238, 183, 3);
}

.trad-popover .ant-popover-inner{
    background-color: transparent;
}

.trad-popover .ant-popover-inner-content{
    border:1px solid rgb(238, 183, 3);
    border-radius: 50px;
    background-color: black;
    color: white;
    font-feature-settings: normal;
    font-family: 'MonserratLight';
    font-variant: normal;
}

.hex-legend-wrapper{
    padding: 0px;
    line-height: 1;
}

.ShotView .view-switch-button.ant-btn {
    width:25%;
    min-height: 100%;
    height: 100%;
    background-color: rgb(22,22,22);
    border-radius: 0px;
    border:0px;
    /*border-bottom:2px solid rgba(165, 80, 212, 1);*/
    color: rgb(204, 204, 204);
    font-size: 20px;
    line-height: 1;
    transition: none;
    padding-bottom: 10px;
    --antd-wave-shadow-color:rgba(255, 255, 255,0) !important;

}

.ShotView .view-switch-button.ant-btn:hover{
    background-color: rgb(41, 28, 46);
    cursor: pointer;
}

html {
    --antd-wave-shadow-color:rgb(255, 255, 255) !important;
}

#view-switch-buttons-wrapper{
    border:  2px solid rgb(41, 41, 41);
    display: inline-block;
    margin:auto;
    margin-bottom: 5%;
    border-radius:6px;
    width: 90%;
    height:100%;
}

#classic-view-switch-button{
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

#hex-view-switch-button{
    border-left:  2px solid rgb(41, 41, 41);
    border-right: 2px solid rgb(41, 41, 41);
}

#zone-view-switch-button{
    border-right: 2px solid rgb(41, 41, 41);
}

#heat-view-switch-button{
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

